--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;URL=karaoke/input.jsp">
+    <meta http-equiv="refresh" content="10;URL=karaoke/input.jsp">
     <title>カラオケ</title>
   </head>
   <body>
     <br>
-    <a href="karaoke/input.jsp">予約システムに移動</a>
+    <a href="karaoke/input.jsp">予約システムに移動</a><br>
+    <img border="0" src="LOGO.png" width="50%" alt="TCS"><br>
+    田中コンピューターサービス<br>
   </body>
 </html>
